--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./Breath-eli.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Breath Well</title>
   </head>
   <body>
@@ -45,6 +45,6 @@
       <div class="gradient-circle"></div>
     </div>
 
-    <script src="./breath-eliv.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
