--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Breath Well</title>
   </head>
   <body>
-    <h1>" Breath Well !!! "</h1>
+    <h1>" Breathe Well !!! "</h1>
 
     <div class="breath-controls">
       <button id="startBtn" class="breath-btn left-btn">Start</button>
